--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,34 @@
-ENV=development
-HOST=0.0.0.0
-PORT=8080
+# Guitar Specs Application Configuration
+# Copy this file to .env and modify values as needed
+
+# Server Configuration
+HOST=127.0.0.1                    # Server host address (0.0.0.0 for all interfaces)
+PORT=8443                          # Server port number (8443 for HTTPS, 8080 for HTTP)
+ENV=development                    # Environment name (development, production, staging)
+
+# HTTPS Configuration
+ENABLE_HTTPS=true                  # Whether to enable HTTPS (true/false)
+SSL_CERT_FILE=ssl/localhost.crt   # Path to SSL certificate file
+SSL_KEY_FILE=ssl/localhost.key    # Path to SSL private key file
+
+# HTTP to HTTPS Redirect
+REDIRECT_HTTP=true                 # Whether to redirect HTTP to HTTPS (true/false)
+HTTP_REDIRECT_PORT=8080           # Port for HTTP redirect server (8080 for development, 80 for production)
+
+# Advanced Server Configuration
+READ_TIMEOUT=10s                  # Request read timeout (e.g., 10s, 30s)
+WRITE_TIMEOUT=30s                 # Response write timeout (e.g., 30s, 60s)
+IDLE_TIMEOUT=60s                  # Connection idle timeout (e.g., 60s, 120s)
+READ_HEADER_TIMEOUT=5s            # Header read timeout (e.g., 5s, 10s)
+MAX_HEADER_BYTES=1048576          # Maximum header size in bytes (1MB = 1048576)
+
+# Security Options
+TRUSTED_PROXIES=127.0.0.1,::1    # Comma-separated list of trusted proxy IPs
+RATE_LIMIT=100                    # Requests per minute per IP address
+RATE_LIMIT_WINDOW=1m              # Rate limit window (e.g., 1m, 5m, 1h)
+
+# Development Notes:
+# - For local development, use ports above 1024 to avoid permission issues
+# - Generate SSL certificates with: make ssl-gen
+# - Check configuration with: make env-check
+# - Clean up with: make clean
