--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,14 @@ MAX_HEADER_BYTES=1048576          # Maximum header size in bytes (1MB = 1048576)
 # Security Options
 TRUSTED_PROXIES=127.0.0.1,::1    # Comma-separated list of trusted proxy IPs
 
+# Database Connection
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=app
+DB_PASSWORD=secret
+DB_NAME=guitar_specs
+DB_SSLMODE=disable
+
 # Development Notes:
 # - For local development, use ports above 1024 to avoid permission issues
 # - Generate SSL certificates with: make ssl-gen
