--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@
 /build/
 /dist/
 
+# Frontend build artifacts
+web/static/dist/
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Temporary and log files
 *.log
 *.tmp
