--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "watch:css": "tailwindcss -i web/static/src/style.css -o web/static/dist/css/style.css --watch"
   },
   "devDependencies": {
-    "esbuild": "^0.19.0",
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "esbuild": "^0.25.9",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.17"
   },
   "dependencies": {
-    "htmx.org": "^2.0.6",
-    "alpinejs": "^3.13.3"
+    "alpinejs": "^3.13.3",
+    "htmx.org": "^2.0.6"
   }
 }
