--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "watch:css": "tailwindcss -i web/static/src/style.css -o web/static/dist/css/style.css --watch"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
+    "@tailwindcss/postcss": "^4.1.12",
     "esbuild": "^0.25.9",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.12"
   },
   "dependencies": {
     "alpinejs": "^3.13.3",
