intorduce startup and runtime log groups while runtime level is configured

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,9 @@ DB_PASSWORD=secret
 DB_NAME=guitar_specs
 DB_SSLMODE=disable
 
+# Runtime logging level
+LOG_LEVEL=warn  # debug, info, warn, error
+
 # Development Notes:
 # - For local development, use ports above 1024 to avoid permission issues
 # - Generate SSL certificates with: make ssl-gen
